--- a/package.json
+++ b/package.json
@@ -25,5 +25,6 @@
     "eslint-plugin-react-refresh": "^0.4.3",
     "gh-pages": "^6.3.0",
     "vite": "^4.4.5"
-  }
+  },
+  "homepage": "https://nobody541.github.io/react-project"
 }
